--- a/style.css
+++ b/style.css
@@ -185,4 +185,6 @@ button:hover, select:hover {
 }
 
 .popup-content button:hover {
-  background: linear-gradient(45deg, #ff00ff, #ff3
+  background: linear-gradient(45deg, #ff00ff, #ff33cc);
+  transform: scale(1.05);
+}
